--- a/main.css
+++ b/main.css
@@ -6,6 +6,21 @@ main {
 
 header {
    margin: 20px 25px 5px;
+   display: flex;
+   gap: 30px;
+   align-items: flex-start;
+}
+
+select {
+   font-size: 14px;
+   width: 235px;
+   padding: 5px 10px;
+   cursor: pointer;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+   background: url("/img/down-arrow.svg") center right 10px no-repeat;
+   background-size: 12px;
 }
 
 img {
@@ -15,6 +30,14 @@ img {
    height: 220px;
 }
 
+p {
+   margin-bottom: 8px;
+}
+
+label {
+   font-size: 14px;
+}
+
 .card {
    font-size: 14px;
    border: none;
@@ -22,22 +45,41 @@ img {
    flex-direction: row;
 }
 
-p {
-   margin-bottom: 10px;
+.card-desc {
+   display: none; /*ДЛЯ МОДАЛКИ*/
+   height: 85px;
+   overflow-y: auto;
+   margin-bottom: 8px;
 }
 
-.m-2 {
+.modal {
+   display: block; /*ДЛЯ МОДАЛКИ - ИЗМЕНИ НА НУЖНЫЙ КЛАСС*/
+}
+
+.card-text span {
+   font-size: 20px;
+   font-weight: 500;
+}
+
+.card.m-2 {
    border: 1px solid rgba(0, 0, 0, 0.125);
    border-radius: 5px;
 }
 
-select {
-   width: 235px;
-   padding: 5px 10px;
-   cursor: pointer;
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none;
-   background: url("/img/down-arrow.svg") center right 10px no-repeat;
-   background-size: 12px;
+.card.m-2:hover {
+   box-shadow: 0px 0px 50px -5px rgba(34, 60, 80, 0.2);
+   transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
+   z-index: 2;
+}
+
+.btn {
+   padding: 8px 26px;
+}
+
+.form-check:last-of-type {
+   margin-bottom: 8px;
+}
+
+.genres h6 {
+   margin-top: 8px;
 }
