--- a/style.scss
+++ b/style.scss
@@ -47,6 +47,7 @@ header {
       width: 24px;
    }
    & input {
+      text-transform: uppercase;
       font-size: 20px;
       padding: 0;
       border-radius: 0;
@@ -111,18 +112,6 @@ h2 {
    }
 }
 
-.genres h4 {
-   cursor: pointer;
-   position: relative;
-   font-size: 20px;
-   margin: 0;
-   padding: 10px;
-   font-weight: 400;
-   text-transform: uppercase;
-   background: url("/img/down-arrow.svg") top 20px right 20px no-repeat;
-   background-size: 12px;
-}
-
 .close {
    &:hover {
       cursor: pointer;
@@ -150,6 +139,17 @@ h2 {
 }
 
 .accordion {
+   & h4 {
+      cursor: pointer;
+      position: relative;
+      font-size: 20px;
+      margin: 0;
+      padding: 10px;
+      font-weight: 400;
+      text-transform: uppercase;
+      background: url("/img/down-arrow.svg") top 20px right 20px no-repeat;
+      background-size: 12px;
+   }
    &_content {
       max-height: 0px;
       overflow: hidden;
