--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ header {
 }
 
 .input-group input {
+  text-transform: uppercase;
   font-size: 20px;
   padding: 0;
   border-radius: 0;
@@ -146,18 +147,6 @@ h2:before {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.genres h4 {
-  cursor: pointer;
-  position: relative;
-  font-size: 20px;
-  margin: 0;
-  padding: 10px;
-  font-weight: 400;
-  text-transform: uppercase;
-  background: url("/img/down-arrow.svg") top 20px right 20px no-repeat;
-  background-size: 12px;
-}
-
 .close:hover {
   cursor: pointer;
 }
@@ -186,6 +175,18 @@ h2:before {
 
 .close:hover::before, .close:hover::after {
   background-color: rgba(255, 0, 0, 0.6);
+}
+
+.accordion h4 {
+  cursor: pointer;
+  position: relative;
+  font-size: 20px;
+  margin: 0;
+  padding: 10px;
+  font-weight: 400;
+  text-transform: uppercase;
+  background: url("/img/down-arrow.svg") top 20px right 20px no-repeat;
+  background-size: 12px;
 }
 
 .accordion_content {
