--- a/style.scss
+++ b/style.scss
@@ -42,9 +42,9 @@ header {
    box-sizing: border-box;
    & img {
       position: relative;
-      top: 5px;
-      height: 24px;
-      width: 24px;
+      top: 3px;
+      width: 28px;
+      height: 28px;
    }
    & input {
       text-transform: uppercase;
@@ -71,12 +71,13 @@ header {
    background-color: white;
    color: black;
    padding: 5px 10px;
-   &:hover,
-   &:focus {
-      box-shadow: none;
+   &:hover {
       border-color: black;
       background-color: black;
       color: white;
+   }
+   &:focus {
+      box-shadow: none;
    }
 }
 
@@ -85,23 +86,56 @@ label {
    text-transform: uppercase;
 }
 
-h2 {
-   font-weight: 400;
-   margin-bottom: 0;
-   text-transform: uppercase;
-   font-size: 28px;
-   position: relative;
-   padding: 10px;
-   &:after {
-      content: "";
-      position: absolute;
-      bottom: 0px;
-      left: 0px;
-      width: 100vw;
-      height: 1px;
-      background-color: rgba(0, 0, 0, 0.5);
+.interface {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   &-title {
+      position: relative;
+      font-weight: 400;
+      margin-bottom: 0;
+      text-transform: uppercase;
+      font-size: 28px;
+      padding: 10px;
+      &::after {
+         content: "";
+         position: absolute;
+         bottom: 0px;
+         left: 0px;
+         width: 100vw;
+         height: 1px;
+         background-color: rgba(0, 0, 0, 0.5);
+      }
    }
-   &:before {
+   &-icons {
+      display: flex;
+      align-items: center;
+   }
+   &-cart,
+   &-history {
+      top: -3px;
+      cursor: pointer;
+      padding: 10px;
+      text-transform: uppercase;
+      font-size: 20px;
+      position: relative;
+   }
+   &-history {
+      padding-right: 0;
+   }
+   &-cart {
+      & img {
+         width: 30px;
+         height: 30px;
+      }
+   }
+   &-history {
+      & img {
+         width: 30px;
+         height: 30px;
+      }
+   }
+   &-cart::before {
       content: "";
       position: absolute;
       right: 0px;
@@ -139,16 +173,26 @@ h2 {
 }
 
 .accordion {
-   & h4 {
-      cursor: pointer;
-      position: relative;
+   h4 {
       font-size: 20px;
       margin: 0;
       padding: 10px;
       font-weight: 400;
       text-transform: uppercase;
-      background: url("/img/down-arrow.svg") top 20px right 20px no-repeat;
-      background-size: 12px;
+   }
+   &_header {
+      cursor: pointer;
+      position: relative;
+      &::after {
+         content: "";
+         position: absolute;
+         width: 100%;
+         height: 100%;
+         background: url("/img/down-arrow.svg") center right no-repeat;
+         top: 0;
+         right: 20px;
+         background-size: 12px;
+      }
    }
    &_content {
       max-height: 0px;
@@ -157,14 +201,15 @@ h2 {
       margin-left: 10px;
    }
    &_content.active {
-      max-height: 280px;
+      max-height: 276px;
       overflow: visible;
       margin-bottom: 10px;
+      transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
    }
 }
 
 .card {
-   padding: 10px;
+   padding: 10px 20px 10px 10px;
    width: 25%;
    text-transform: uppercase;
    font-size: 14px;
@@ -177,7 +222,9 @@ h2 {
    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
    &-title {
       margin-bottom: 0;
+      font-weight: 400;
    }
+
    &-text {
       margin-bottom: 10px;
    }
@@ -194,8 +241,7 @@ h2 {
       text-align: right;
    }
    &-desc {
-      margin-bottom: 8px;
-      padding-bottom: 10px;
+      margin-bottom: 10px;
       max-height: 80px;
       overflow-y: auto;
       text-transform: none;
@@ -240,6 +286,7 @@ h2 {
       margin-bottom: 8px;
    }
 }
+
 .backdrop {
    position: fixed;
    width: 100%;
@@ -263,6 +310,118 @@ h2 {
    }
 }
 
+.cart-modal {
+   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+   transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
+   position: relative;
+   text-transform: uppercase;
+   background: white;
+   max-height: 600px;
+   width: auto;
+   padding: 10px 50px 10px 10px;
+   display: flex;
+   flex-direction: column;
+   .card-head {
+      padding: 0 10px;
+   }
+   &-header {
+      margin: 10px;
+      display: grid;
+      grid-template-columns: 4fr 1fr 1fr;
+      &-price {
+         text-align: right;
+      }
+   }
+   &-head {
+      padding: 10px;
+   }
+   &-desc {
+      display: flex;
+      width: 60%;
+   }
+   &-items {
+      max-height: 400px;
+      overflow-y: auto;
+      padding: 10px;
+   }
+   &-item {
+      display: flex;
+      justify-content: space-between;
+      &:not(:last-of-type) {
+         padding-bottom: 10px;
+      }
+   }
+   &-img {
+      max-width: 80px;
+      max-height: 120px;
+   }
+   &-quantity {
+      padding-right: 20px;
+      display: flex;
+      align-items: start;
+      gap: 10px;
+      font-size: 20px;
+      & a {
+         text-decoration: none;
+         color: black;
+      }
+   }
+   &-price {
+      font-size: 20px;
+   }
+   &-button,
+   &-sum {
+      margin: 10px 0;
+      align-self: flex-end;
+      visibility: hidden;
+   }
+   &-sum {
+      margin-bottom: 0;
+   }
+   &-add {
+      position: relative;
+      top: 2px;
+      padding: 14px;
+      border-radius: 100%;
+      border: 1px solid transparent;
+      background-color: #efefef;
+   }
+   &-minus::before {
+      content: "";
+      position: absolute;
+      top: 7px;
+      left: 7px;
+      width: 14px;
+      height: 14px;
+      background: url("/img/minus.svg") no-repeat;
+   }
+   &-plus::before {
+      content: "";
+      position: absolute;
+      top: 7px;
+      right: 7px;
+      width: 14px;
+      height: 14px;
+      background: url("/img/plus.svg") no-repeat;
+   }
+   &-add:hover {
+      border: 1px solid rgba(0, 0, 0, 0.5);
+   }
+   &-add:active {
+      background-color: #e6e6e6;
+      border: 1px solid rgba(0, 0, 0, 0.5);
+   }
+}
+
+.noitems {
+   padding: 0 10px;
+}
+
+::-webkit-scrollbar {
+   width: 0px;
+   background-color: white;
+}
+
 @media (max-width: 1240px) {
    .card {
       width: 33.333%;
@@ -279,12 +438,13 @@ h2 {
    .card {
       width: 100%;
    }
-   h2 {
+   .interface-title {
       font-size: 24px;
    }
-   .genres h4,
+   .accordion h4,
    .select-sort,
-   .input-group input {
+   .input-group input,
+   .cart {
       font-size: 16px;
    }
    .genres h4 {
@@ -296,12 +456,13 @@ h2 {
    .card {
       width: 100%;
    }
-   h2 {
+   .interface-title {
       font-size: 20px;
    }
-   .genres h4,
+   .accordion h4,
    .select-sort,
-   .input-group input {
+   .input-group input,
+   .cart {
       font-size: 12px;
    }
 }
