--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ header {
 }
 
 .select-sort {
-   padding: 10px 10px 35px;
+   padding: 10px;
    line-height: 1.2;
    font-size: 20px;
    max-height: 35px;
@@ -375,7 +375,7 @@ label {
       visibility: hidden;
    }
    &-sum {
-      margin-bottom: 0;
+      margin: 0;
    }
    &-add {
       position: relative;
@@ -412,8 +412,47 @@ label {
    }
 }
 
+.cool {
+   z-index: 200;
+}
+
+.form-modal {
+   position: relative;
+   width: 300px;
+   height: 300px;
+   background-color: white;
+   padding: 50px;
+   text-transform: uppercase;
+   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+   &-title {
+      margin-bottom: 10px;
+   }
+   &-body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+   }
+   &-input {
+      border: 1px solid rgba(0, 0, 0, 0.5);
+      color: black;
+      padding-left: 5px;
+   }
+   &-input::placeholder {
+      text-transform: uppercase;
+      color: rgba(0, 0, 0, 0.5);
+   }
+   &-button {
+      margin-top: 10px;
+   }
+}
+
 .noitems {
    padding: 0 10px;
+}
+
+.invalid {
+   border: 1px solid #d00040;
 }
 
 ::-webkit-scrollbar {
@@ -455,8 +494,22 @@ label {
    .card {
       width: 100%;
    }
+   .cart-modal {
+      padding-right: 10px;
+      .close::before,
+      .close::after {
+         top: 3px;
+         right: 10px;
+      }
+   }
    .interface-title {
       font-size: 20px;
+   }
+   .interface-history a img,
+   .interface-cart a img,
+   .input-group img {
+      height: 24px;
+      width: 24px;
    }
    .accordion h4,
    .select-sort,
