--- a/style.scss
+++ b/style.scss
@@ -309,6 +309,37 @@ label {
    }
 }
 
+.form-modal {
+   position: relative;
+   width: 300px;
+   height: 300px;
+   background-color: white;
+   padding: 50px;
+   text-transform: uppercase;
+   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+   &-title {
+      margin-bottom: 10px;
+   }
+   &-body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+   }
+   &-input {
+      border: 1px solid rgba(0, 0, 0, 0.5);
+      color: black;
+      padding-left: 5px;
+   }
+   &-input::placeholder {
+      text-transform: uppercase;
+      color: rgba(0, 0, 0, 0.5);
+   }
+   &-button {
+      margin-top: 10px;
+   }
+}
+
 .cart-modal {
    box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
    transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
@@ -323,10 +354,12 @@ label {
    .card-head {
       padding: 0 10px;
    }
-   &-header {
+   &-header,
+   .history-modal-header {
       margin: 10px;
       display: grid;
       grid-template-columns: 4fr 1fr 1fr;
+      gap: 10px;
       &-price {
          text-align: right;
       }
@@ -338,7 +371,8 @@ label {
       display: flex;
       width: 60%;
    }
-   &-items {
+   &-items,
+   .history-modal-items {
       max-height: 400px;
       overflow-y: auto;
       padding: 10px;
@@ -412,42 +446,16 @@ label {
    }
 }
 
+.history-modal-title {
+   padding: 10px;
+}
+
 .cool {
    z-index: 200;
 }
 
-.form-modal {
-   position: relative;
-   width: 300px;
-   height: 300px;
-   background-color: white;
-   padding: 50px;
-   text-transform: uppercase;
-   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
-   &-title {
-      margin-bottom: 10px;
-   }
-   &-body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-   }
-   &-input {
-      border: 1px solid rgba(0, 0, 0, 0.5);
-      color: black;
-      padding-left: 5px;
-   }
-   &-input::placeholder {
-      text-transform: uppercase;
-      color: rgba(0, 0, 0, 0.5);
-   }
-   &-button {
-      margin-top: 10px;
-   }
-}
-
-.noitems {
+.noitems,
+.noorders {
    padding: 0 10px;
 }
 
