--- a/style.css
+++ b/style.css
@@ -4,25 +4,25 @@ body {
 }
 
 main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  border-top: 1px solid rgba(0, 0, 0, 0.5);
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -ms-flex-wrap: wrap;
+   flex-wrap: wrap;
+   border-top: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 header {
-  overflow: hidden;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 50% 50%;
-  grid-template-columns: 50% 50%;
-  -ms-grid-rows: auto;
-  grid-template-rows: auto;
-  -webkit-box-align: top;
-  -ms-flex-align: top;
-  align-items: top;
+   overflow: hidden;
+   display: -ms-grid;
+   display: grid;
+   -ms-grid-columns: 50% 50%;
+   grid-template-columns: 50% 50%;
+   -ms-grid-rows: auto;
+   grid-template-rows: auto;
+   -webkit-box-align: top;
+   -ms-flex-align: top;
+   align-items: top;
 }
 
 .select-sort {
@@ -33,15 +33,15 @@ header {
 }
 
 .select-sort select {
-  cursor: pointer;
-  text-transform: uppercase;
-  width: 100%;
-  border: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background: url("/img/down-arrow.svg") center right 10px no-repeat;
-  background-size: 12px;
+   cursor: pointer;
+   text-transform: uppercase;
+   width: 100%;
+   border: 0;
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+   background: url("/img/down-arrow.svg") center right 10px no-repeat;
+   background-size: 12px;
 }
 
 .select-sort select:focus-visible {
@@ -49,9 +49,9 @@ header {
 }
 
 .input-group {
-  padding: 10px;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
+   padding: 10px;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
 }
 
 .input-group img {
@@ -92,8 +92,8 @@ header {
 
 .input-group input:active,
 .input-group input:focus {
-  -webkit-box-shadow: none;
-  box-shadow: none;
+   -webkit-box-shadow: none;
+   box-shadow: none;
 }
 
 .btn {
@@ -114,7 +114,6 @@ header {
 .btn:focus {
    -webkit-box-shadow: none;
    box-shadow: none;
-
 }
 
 label {
@@ -330,23 +329,23 @@ label {
 
 .card:hover,
 .card.active {
-  -webkit-box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
-  -webkit-transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
-  -o-transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
-  transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
-  z-index: 5;
+   -webkit-box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+   -webkit-transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
+   -o-transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
+   transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.2s;
+   z-index: 5;
 }
 
 .card.active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  width: 50%;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-orient: horizontal;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: row;
+   flex-direction: row;
+   width: 50%;
 }
 
 .form-check label {
@@ -396,13 +395,71 @@ label {
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
-
 }
 
 .backdrop.show-modal {
    opacity: 1;
    visibility: visible;
    pointer-events: initial;
+}
+
+.form-modal {
+   position: relative;
+   width: 300px;
+   height: 300px;
+   background-color: white;
+   padding: 50px;
+   text-transform: uppercase;
+   -webkit-box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
+}
+
+.form-modal-title {
+   margin-bottom: 10px;
+}
+
+.form-modal-body {
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
+   flex-direction: column;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   gap: 10px;
+}
+
+.form-modal-input {
+   border: 1px solid rgba(0, 0, 0, 0.5);
+   color: black;
+   padding-left: 5px;
+}
+
+.form-modal-input::-webkit-input-placeholder {
+   text-transform: uppercase;
+   color: rgba(0, 0, 0, 0.5);
+}
+
+.form-modal-input:-ms-input-placeholder {
+   text-transform: uppercase;
+   color: rgba(0, 0, 0, 0.5);
+}
+
+.form-modal-input::-ms-input-placeholder {
+   text-transform: uppercase;
+   color: rgba(0, 0, 0, 0.5);
+}
+
+.form-modal-input::placeholder {
+   text-transform: uppercase;
+   color: rgba(0, 0, 0, 0.5);
+}
+
+.form-modal-button {
+   margin-top: 10px;
 }
 
 .cart-modal {
@@ -430,15 +487,18 @@ label {
    padding: 0 10px;
 }
 
-.cart-modal-header {
+.cart-modal-header,
+.cart-modal .history-modal-header {
    margin: 10px;
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: 4fr 1fr 1fr;
    grid-template-columns: 4fr 1fr 1fr;
+   gap: 10px;
 }
 
-.cart-modal-header-price {
+.cart-modal-header-price,
+.cart-modal .history-modal-header-price {
    text-align: right;
 }
 
@@ -453,7 +513,8 @@ label {
    width: 60%;
 }
 
-.cart-modal-items {
+.cart-modal-items,
+.cart-modal .history-modal-items {
    max-height: 400px;
    overflow-y: auto;
    padding: 10px;
@@ -548,70 +609,16 @@ label {
    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+.history-modal-title {
+   padding: 10px;
+}
+
 .cool {
    z-index: 200;
 }
 
-.form-modal {
-   position: relative;
-   width: 300px;
-   height: 300px;
-   background-color: white;
-   padding: 50px;
-   text-transform: uppercase;
-   -webkit-box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
-   box-shadow: 0px 5px 100px 50px rgba(34, 60, 80, 0.2);
-}
-
-.form-modal-title {
-   margin-bottom: 10px;
-}
-
-.form-modal-body {
-   display: -webkit-box;
-   display: -ms-flexbox;
-   display: flex;
-   -webkit-box-orient: vertical;
-   -webkit-box-direction: normal;
-   -ms-flex-direction: column;
-   flex-direction: column;
-   -webkit-box-align: center;
-   -ms-flex-align: center;
-   align-items: center;
-   gap: 10px;
-}
-
-.form-modal-input {
-   border: 1px solid rgba(0, 0, 0, 0.5);
-   color: black;
-   padding-left: 5px;
-}
-
-.form-modal-input::-webkit-input-placeholder {
-   text-transform: uppercase;
-   color: rgba(0, 0, 0, 0.5);
-}
-
-.form-modal-input:-ms-input-placeholder {
-   text-transform: uppercase;
-   color: rgba(0, 0, 0, 0.5);
-}
-
-.form-modal-input::-ms-input-placeholder {
-   text-transform: uppercase;
-   color: rgba(0, 0, 0, 0.5);
-}
-
-.form-modal-input::placeholder {
-   text-transform: uppercase;
-   color: rgba(0, 0, 0, 0.5);
-}
-
-.form-modal-button {
-   margin-top: 10px;
-}
-
-.noitems {
+.noitems,
+.noorders {
    padding: 0 10px;
 }
 
