--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ header {
       width: 100%;
       border: 0;
       appearance: none;
-      background: url("/img/down-arrow.svg") center right 10px no-repeat;
+      background: url("./img/down-arrow.svg") center right 10px no-repeat;
       background-size: 12px;
    }
    & select:focus-visible {
@@ -187,7 +187,7 @@ label {
          position: absolute;
          width: 100%;
          height: 100%;
-         background: url("/img/down-arrow.svg") center right no-repeat;
+         background: url("./img/down-arrow.svg") center right no-repeat;
          top: 0;
          right: 20px;
          background-size: 12px;
@@ -426,7 +426,7 @@ label {
       left: 7px;
       width: 14px;
       height: 14px;
-      background: url("/img/minus.svg") no-repeat;
+      background: url("./img/minus.svg") no-repeat;
    }
    &-plus::before {
       content: "";
@@ -435,7 +435,7 @@ label {
       right: 7px;
       width: 14px;
       height: 14px;
-      background: url("/img/plus.svg") no-repeat;
+      background: url("./img/plus.svg") no-repeat;
    }
    &-add:hover {
       border: 1px solid rgba(0, 0, 0, 0.5);
