--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ header {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
-   background: url("./img/down-arrow.svg") center right 10px no-repeat;
+   background: url("/img/down-arrow.svg") center right 10px no-repeat;
    background-size: 12px;
 }
 
@@ -245,21 +245,15 @@ label {
    position: absolute;
    width: 100%;
    height: 100%;
-   background: url("./img/down-arrow.svg") center right no-repeat;
+   background: url("/img/down-arrow.svg") center right no-repeat;
    top: 0;
    right: 20px;
    background-size: 12px;
 }
 
 .accordion_content {
-   -webkit-transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-   -o-transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
-   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
    max-height: 0px;
    overflow: hidden;
-   -webkit-transition: all 0.5s linear;
-   -o-transition: all 0.5s linear;
-   transition: all 0.5s linear;
    margin-left: 10px;
 }
 
@@ -310,16 +304,15 @@ label {
 }
 
 .card-desc {
-   margin-bottom: 10px;
-   max-height: 80px;
+   max-height: 75px;
    overflow-y: auto;
    text-transform: none;
 }
 
 .card-img {
    padding: 10px;
-   grid-row: 2;
-   grid-column: 1;
+   -ms-grid-row: 2;
+   -ms-grid-column: 1;
    -ms-grid-column-span: 2;
    grid-area: image;
    margin: 0 auto;
@@ -587,7 +580,7 @@ label {
    left: 7px;
    width: 14px;
    height: 14px;
-   background: url("./img/minus.svg") no-repeat;
+   background: url("/img/minus.svg") no-repeat;
 }
 
 .cart-modal-plus::before {
@@ -597,7 +590,7 @@ label {
    right: 7px;
    width: 14px;
    height: 14px;
-   background: url("./img/plus.svg") no-repeat;
+   background: url("/img/plus.svg") no-repeat;
 }
 
 .cart-modal-add:hover {
@@ -637,15 +630,21 @@ label {
    }
 }
 
-@media (max-width: 991px) {
+@media (max-width: 992px) {
    .card {
       width: 50%;
    }
 }
 
-@media (max-width: 769px) {
+@media (max-width: 768px) {
    .card {
       width: 100%;
+   }
+   .card.active {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
    }
    .interface-title {
       font-size: 24px;
