--- a/style.scss
+++ b/style.scss
@@ -244,6 +244,7 @@ label {
    }
    &-img {
       padding: 10px;
+      padding-right: 0;
       grid-area: image;
       margin: 0 auto;
       max-width: 150px;
@@ -482,6 +483,10 @@ label {
       width: 100%;
       &.active {
          flex-direction: column;
+      }
+      &-img {
+         margin: 0;
+         padding-bottom: 0;
       }
    }
 
