--- a/style.css
+++ b/style.css
@@ -311,6 +311,7 @@ label {
 
 .card-img {
    padding: 10px;
+   padding-right: 0;
    -ms-grid-row: 2;
    -ms-grid-column: 1;
    -ms-grid-column-span: 2;
@@ -645,6 +646,10 @@ label {
       -webkit-box-direction: normal;
       -ms-flex-direction: column;
       flex-direction: column;
+   }
+   .card-img {
+      margin: 0;
+      padding-bottom: 0;
    }
    .interface-title {
       font-size: 24px;
