--- a/style.scss
+++ b/style.scss
@@ -484,7 +484,7 @@ label {
       &.active {
          flex-direction: column;
       }
-      &-img {
+      &.active &-img {
          margin: 0;
          padding-bottom: 0;
       }
